# pyviztest

./: .gitignore  README.md  pyproject.toml  setup.py
pyviztest/com/pyviztestcore/: viztest.py
pyviztest/com/tests/unittest/: test_playwright.py  test_selenium.py
