[tool.poetry]
name = "pyviztest"
version = "1.0.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
allure-pytest = "2.13.1"
allure-python-commons = "2.13.1"
async-generator = "1.10"
attrs = "22.2.0"
certifi = "2022.12.7"
cffi = "1.15.1"
charset-normalizer = "3.1.0"
colorama="0.4.6"
exceptiongroup="1.1.1"
execnet="1.9.0"
greenlet="2.0.1"
h11="0.14.0"
idna="3.4"
iniconfig="2.0.0"
outcome="1.2.0"
packaging="23.0"
Pillow="9.5.0"
pixelmatch="0.3.0"
playwright="1.32.1"
pluggy="1.0.0"
pycparser="2.21"
pyee="9.0.4"
PySocks="1.7.1"
pytest="7.2.2"
pytest-base-url="2.0.0"
pytest-playwright="0.3.2"
pytest-rerunfailures="11.1.2"
pytest-xdist="3.2.1"
python-slugify="6.1.2"
requests="^2.28.2"
selenium="4.8.3"
sniffio="1.3.0"
sortedcontainers="2.4.0"
text-unidecode="1.3"
trio="0.22.0"
trio-websocket="0.10.2"
typing_extensions="4.5.0"
urllib3="1.26.15"
wsproto="1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend ="poetry.core.masonry.api"
